index.html angepasst

--- a/HTML/rooperRunner.html
+++ b/HTML/rooperRunner.html
@@ -23,7 +23,7 @@
     <nav>
         <ul>
          
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="news.html">Newsletter</a></li>
           <li><a href="ueberMich.html">Über Mich</a></li>
           <li><a href="#Kontakt">Kontakt</a></li>
