--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <h2><b>Härzlich Wilkommä</b></h2>
         <article>
-                        <img src="../Medien/DaBoys.jpg" width="750" alt="Platzhalter" >
+                        <img src="/Medien/DaBoys.jpg" width="750" alt="Platzhalter" >
             <p> Herzlich Willkommen auf meiner Website,
               auf der ich stolz meine Webseite für das Modul 101 mit Ihnen teile.
               Ich bin Elias Düggeli, und auf dieser Webseite teile ich mit euch
@@ -49,11 +49,11 @@
             <div class="scrollbox-inner">
                 <article>
                     <h3>Neues Video</h3>
-                    <video class="tiktok-sidebar" src="../Medien/TIktok_Video1.mp4" controls></video>
+                    <video class="tiktok-sidebar" src="/Medien/TIktok_Video1.mp4" controls></video>
                 </article>
                 <article>
                     <h3>Neues Video</h3>
-                    <video class="tiktok-sidebar" src="../Medien/TikTok.mp4" controls></video>
+                    <video class="tiktok-sidebar" src="/Medien/TikTok.mp4" controls></video>
                 </article>
             </div>
         </div>
