--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,10 +18,10 @@
         <ul>
          
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="/HTML/news.html">Newsletter</a></li>
-          <li><a href="/HTML/ueberMich.html">Über Mich</a></li>
+          <li><a href="news.html">Newsletter</a></li>
+          <li><a href="ueberMich.html">Über Mich</a></li>
           <li><a href="#Kontakt">Kontakt</a></li>
-          <li><a href="/HTML/rooperRunner.html">Rooper Runner</a></li>
+          <li><a href="rooperRunner.html">Rooper Runner</a></li>
         </ul>
     </nav>
     <main>
