--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projektarbeit</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link href="https://fonts.cdnfonts.com/css/roboto-mono" rel="stylesheet">
     
 </head>
@@ -27,7 +27,7 @@
     <main>
         <h2><b>Härzlich Wilkommä</b></h2>
         <article>
-                        <img src="/Medien/DaBoys.jpg" width="750" alt="Platzhalter" >
+                        <img src="../Medien/DaBoys.Sjpg" width="750" alt="Platzhalter" >
             <p> Herzlich Willkommen auf meiner Website,
               auf der ich stolz meine Webseite für das Modul 101 mit Ihnen teile.
               Ich bin Elias Düggeli, und auf dieser Webseite teile ich mit euch
