--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,11 +49,11 @@
             <div class="scrollbox-inner">
                 <article>
                     <h3>Neues Video</h3>
-                    <video class="tiktok-sidebar" src="/Medien/TIktok_Video1.mp4" controls></video>
+                    <video class="tiktok-sidebar" src="../Medien/TikTok.mp4" controls></video>
                 </article>
                 <article>
                     <h3>Neues Video</h3>
-                    <video class="tiktok-sidebar" src="/Medien/TikTok.mp4" controls></video>
+                    <video class="tiktok-sidebar" src="../Medien/TIktok_Video1.mp4" controls></video>
                 </article>
             </div>
         </div>
