--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
     <main>
         <h2><b>Härzlich Wilkommä</b></h2>
         <article>
-                        <img src="../Medien/DaBoys.Sjpg" width="750" alt="Platzhalter" >
+            <img src="../Medien/DaBoys.jpg" width="750" alt="Platzhalter" >
             <p> Herzlich Willkommen auf meiner Website,
               auf der ich stolz meine Webseite für das Modul 101 mit Ihnen teile.
               Ich bin Elias Düggeli, und auf dieser Webseite teile ich mit euch
