--- a/HTML/rooperRunner.html
+++ b/HTML/rooperRunner.html
@@ -38,6 +38,10 @@
               <img class="mySlides" src="../Medien/Bild2.png" alt="" style="width:100%">
               <img class="mySlides" src="../Medien/Bild3.png" alt="" style="width:100%">
               <img class="mySlides" src="../Medien/Bild4.png" alt="" style="width:100%">
+              <img class="mySlides" src="../Medien/Bild5.png" alt="" style="width:100%">
+              <img class="mySlides" src="../Medien/Bild6.png" alt="" style="width:100%">
+              <img class="mySlides" src="../Medien/Bild7.png" alt="" style="width:100%">
+              <img class="mySlides" src="../Medien/Bild8.png" alt="" style="width:100%">
             
               <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
               <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
